--- a/css/dsCSYT.css
+++ b/css/dsCSYT.css
@@ -1,10 +1,14 @@
 @font-face{
   font-family: SFUITextBold;
-  src: url(SF-UI-Text-Bold.ttf);
+  src: url(../Fontstyle/SF-UI-Text-Bold.ttf);
 }
 @font-face{
   font-family: SFUITextRegular;
-  src: url(SFUIText-Regular.ttf)
+  src: url(../Fontstyle/SFUIText-Regular.ttf)
+}
+@font-face{
+  font-family: MyriaRegular;
+  src:url(../Fontstyle/SFUIText-Regular.ttf);
 }
 .title-dsCSYT {
   font-size: 24px;
@@ -66,7 +70,7 @@
 }
 .dsCSYT-item button {
   border-radius: 4pt;
-  font-family: "Myriad Pro Regular";
+  font-family:MyriaRegular;
 }
 .dsCSYT-item button:nth-child(4) {
   background-color: white;
