--- a/css/ybadientu-main.css
+++ b/css/ybadientu-main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: SFUITextBold;
-  src: url(SF-UI-Text-Bold.ttf);
+  src: url(../Fontstyle/SF-UI-Text-Bold.ttf);
 }
 .ybadientu-menuInfo ul li a {
     font-family: SFUITextBold;
